--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.57.0",
     "react-phone-input-2": "^2.15.1",
     "tailwind-merge": "^3.3.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.49"
   },
   "devDependencies": {
